Add performance tests, add in argparse4j, add README